--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,29 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
+
+	--white: #ffffff;
+	--gray: #ffffff5c;
+	--blue: #09245a;
+	--blue-light: #112095;
+
+	--sky-blue: #65d6fc;
+	--sky-blue-2: #0dc7d2;
+
+	--purple: #5e17eb;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	color: var(--foreground);
+	background: var(--background);
+	font-family: var(--poppins) sans-serif;
 }
