--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,29 +3,29 @@
 @tailwind utilities;
 
 :root {
-	--background: #ffffff;
-	--foreground: #171717;
-
 	--white: #ffffff;
 	--gray: #ffffff5c;
 	--blue: #09245a;
 	--blue-light: #112095;
-
-	--sky-blue: #65d6fc;
-	--sky-blue-2: #0dc7d2;
-
+	--sky-blue: #0dc7d2;
+	--sky-blue-light: #65d6fc;
 	--purple: #5e17eb;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
+		--white: #ffffff;
+		--gray: #ffffff5c;
+		--blue: #09245a;
+		--blue-light: #112095;
+		--sky-blue: #0dc7d2;
+		--sky-blue-light: #65d6fc;
+		--purple: #5e17eb;
 	}
 }
 
 body {
-	color: var(--foreground);
-	background: var(--background);
+	color: white;
+	background: black;
 	font-family: var(--poppins) sans-serif;
 }
