--- a/src/components/shared/ui/BackgroundEllipsis/BackgroundEllipsis.module.scss
+++ b/src/components/shared/ui/BackgroundEllipsis/BackgroundEllipsis.module.scss
@@ -1,17 +1,13 @@
 .ellipsis_one,
 .ellipsis_two {
 	@apply absolute w-[60vw] h-[60vw] md:w-[35vw] md:h-[35vw] blur-[50px] md:blur-[90px];
-	z-index: -2;
-	// filter: blur(90px);
+	z-index: -9;
 }
 
 .ellipsis_one {
-	@apply left-[5rem] top-0;
-	transform: translateY(-35%) translateX(-50%);
+	@apply left-[-13%] top-[-9%];
 }
 
 .ellipsis_two {
 	@apply right-[10%] bottom-[30%] md:bottom-[20%];
-
-	transform: translateY(20%) translateX(30%);
 }
