--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -38,31 +38,18 @@
 
 html,
 body {
-	width: 100%;
-	height: 100%;
-	overflow-x: hidden; /* Prevent horizontal scrolling */
-	overflow-y: hidden; /* Prevent vertical scrolling */
 	box-sizing: border-box;
-}
-
-html,
-body {
-	margin: 0;
-	padding: 0;
-	min-width: 100%;
-	min-height: 100%;
 }
 
 body {
 	color: var(--white);
-	background-color: var(--blue);
+	background: var(--blue);
 	font-family: var(--poppins) sans-serif;
-	background: rgb(2, 0, 36);
 }
 
-body::before {
+main::before {
 	content: '';
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
