Login/Register: Form UI added 👨🏼‍💻

--- a/src/components/shared/ui/BackgroundEllipsis/BackgroundEllipsis.module.scss
+++ b/src/components/shared/ui/BackgroundEllipsis/BackgroundEllipsis.module.scss
@@ -1,13 +1,13 @@
 .ellipsis_one,
 .ellipsis_two {
-	@apply fixed w-[60vw] h-[60vw] md:w-[35vw] md:h-[35vw] blur-[50px] md:blur-[90px];
+	@apply fixed w-[80vw] h-[80vw] md:w-[35vw] md:h-[35vw] blur-[30px] md:blur-[70px];
 	z-index: -9;
 }
 
 .ellipsis_one {
-	@apply left-[-13%] top-[-9%];
+	@apply left-[-20%] top-[-20%] md:left-[-13%] md:top-[-9%];
 }
 
 .ellipsis_two {
-	@apply right-[10%] bottom-[30%] md:bottom-[20%];
+	@apply right-[-30vw] top-[35vw] bottom-0 md:right-[10%] md:top-[20%];
 }
