--- a/src/components/Form/AuthForm/AuthForm.module.scss
+++ b/src/components/Form/AuthForm/AuthForm.module.scss
@@ -39,16 +39,22 @@
 	-webkit-backdrop-filter: blur(30px);
 	backdrop-filter: blur(30px);
 
-	&::placeholder {
-		@apply text-gray opacity-[0.3];
+	&:-webkit-autofill,
+	&:-webkit-autofill:hover,
+	&:-webkit-autofill:focus,
+	&:-webkit-autofill:active {
+		-webkit-text-fill-color: var(--white); /* Your text color */
+		box-shadow: 0 0 0 1000px var(--gray-blur) inset !important;
+		transition: background-color 5000s ease-in-out 0s;
 	}
 
+	&::placeholder,
 	&::-webkit-input-placeholder {
 		@apply text-gray opacity-[0.3];
 	}
 
 	&:focus {
-		@apply outline-none border-sky_blue-light transition duration-300 ease-in-out;
+		@apply outline-none border-sky_blue-light transition duration-300 ease-in-out bg-gray-blur;
 	}
 }
 
