--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,7 +5,7 @@
 :root {
 	--white: #ffffffe7;
 	--gray: #ffffff5c;
-	--gray-hover: #ffffff24;
+	--gray-hover: #ffffff19;
 	--gray-blur: #ffffff11;
 	--blue: #09245a;
 	--blue-light: #112095;
@@ -18,7 +18,7 @@
 
 @layer utilities {
 	.btn_primary_full {
-		@apply w-full px-6 uppercase text-[1.4rem] py-3 font-josefin_sans font-semibold text-white rounded-xl bg-sky_blue-light border border-sky_blue-light transition duration-300 ease-in-out hover:bg-sky_blue hover:text-white hover:border-sky_blue;
+		@apply w-full px-6 uppercase text-[1.2rem] py-2 font-josefin_sans font-semibold text-white rounded-xl bg-sky_blue-light border border-sky_blue-light transition duration-300 ease-in-out hover:bg-sky_blue hover:text-white hover:border-sky_blue;
 
 		box-shadow: 0 0 12px 10px var(--sky-blue-gradient);
 
@@ -27,14 +27,14 @@
 		}
 
 		&:hover {
-			@apply transform scale-105;
+			@apply transform scale-[1.02];
 
 			box-shadow: 0 0 20px 15px var(--sky-blue-gradient);
 		}
 	}
 
 	.google_button {
-		@apply w-full bg-gray-blur px-6 py-4 text-[1.2rem] text-white rounded-xl transition duration-300 ease-in-out flex justify-center items-center gap-3;
+		@apply w-full bg-gray-blur px-6 py-3 text-[1.1rem] text-white rounded-xl transition duration-300 ease-in-out flex justify-center items-center gap-3;
 
 		&:disabled {
 			@apply opacity-75 cursor-not-allowed;
